fix(pronouns.cc): form controls hover contrast

--- a/styles/pronouns.cc/catppuccin.user.css
+++ b/styles/pronouns.cc/catppuccin.user.css
@@ -213,6 +213,18 @@
     .btn-danger {
       #coloredButton(@red);
     }
+    .form-control {
+      &::-webkit-file-upload-button,
+      &::file-selector-button {
+        background-color: @base;
+      }
+	    &:hover:not(:disabled):not([readonly]) {
+        &::-webkit-file-upload-button,
+        &::file-selector-button {
+          background-color: @surface0;
+        }
+      }
+    }
   }
 }
 
